--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ set(BUILD_SHARED_LIBS ON)
 add_subdirectory(cartographer_ros/cartographer_rviz)
 add_subdirectory(cartographer_ros/docs)
 add_subdirectory(rrt_exploration)
-add_subdirectory(nimbro_topic_transport)
+add_subdirectory(nimbro_network/nimbro_topic_transport)
