--- a/rrt_exploration/package.xml
+++ b/rrt_exploration/package.xml
@@ -20,6 +20,8 @@
   <build_depend>tf</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>cartographer_ros</build_depend>
+  <run_depend>cartographer_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
