--- a/cartographer/cartographer-config.cmake.in
+++ b/cartographer/cartographer-config.cmake.in
@@ -32,4 +32,10 @@ else ()
    find_package(Ceres HINTS ${CERES_DIR_HINTS})
 endif()
 
+set(BUILD_GRPC @BUILD_GRPC@)
+
+if(BUILD_GRPC)
+  find_package(async_grpc)
+endif()
+
 include("${CARTOGRAPHER_CMAKE_DIR}/CartographerTargets.cmake")
